<resources>
    <string name="app_name">ExpensesTracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_expense">Add Expense</string>

    <string name="add_expense_header">Add any recent expense</string>

    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>

    <string name="add_expense">Add Expense</string>
    <string name="expenses">Expenses</string>
    <string name="my_name">AJ</string>

    <string name="add">Add</string>

    <string name="add_expense_error">Please complete all fields!</string>
</resources>
